@@ -70,9 +70,13 @@ namespace
     virtual void
     traverse (SemanticGraph::Struct& s)
     {
+      std::string n (s.scoped_name ().str ());
       if (s.context ().count (STRS[VAR_SIZE]))
       {
-        top () = s.context ().get<bool> (STRS[VAR_SIZE]);
+        // Never set 'top' to false (except in pre() above),
+        // so a 'true' value will propagate up the scopes.
+        bool r = s.context ().get<bool> (STRS[VAR_SIZE]);
+        if (r) top () = r;
       }
       else
       {
@@ -83,13 +87,8 @@ namespace
     virtual void
     post (SemanticGraph::Struct& s)
     {
-      bool r (top ());
-
-      s.context ().set (STRS[VAR_SIZE], r);
-
-      pop ();
-
-      if (r) top () = r;
+      // Set our context to the result of nested scope traversal.
+      s.context ().set (STRS[VAR_SIZE], top ());
     }
 
     virtual void
@@ -103,7 +102,10 @@ namespace
     {
       if (u.context ().count (STRS[VAR_SIZE]))
       {
-        top () = u.context ().get<bool> (STRS[VAR_SIZE]);
+        // Never set 'top' to false (except in pre() above),
+        // so a 'true' value will propagate up the scopes.
+        bool r = u.context ().get<bool> (STRS[VAR_SIZE]);
+        if (r) top () = r;
       }
       else
       {
@@ -114,13 +116,8 @@ namespace
     virtual void
     post (SemanticGraph::Union& u)
     {
-      bool r (top ());
-
-      u.context ().set (STRS[VAR_SIZE], r);
-
-      pop ();
-
-      if (r) top () = r;
+      // Set our context to the result of nested scope traversal.
+      u.context ().set (STRS[VAR_SIZE], top ());
     }
 
   private:
