@@ -1,3 +1,9 @@
+Sat Jan 21 21:54:59 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/SizeTypeCalculator.cpp:
+        
+          Fixed a bug in size type calculation of nested structs
+
 Sat Jan 21 20:27:13 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>
 
         * DAnCE/TargetManager/TargetManager.idl:
